# federleicht-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml
federleicht_benchmark/: __init__.py  basic.py  benchmark.py  cli.py  dataset.py  feder.py
