[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "federleicht-benchmark"
version = "0.0.0"
description = ""
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kagglehub = "^0.3.4"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
jinja2-pdoc = "^1.3.0"
yaspin = "^3.1.0"
federleicht = { git = "https://github.com/d-chris/federleicht.git", branch = "develop" }
click = "^8.1.7"

[tool.poetry.scripts]
federmark = "federleicht_benchmark.cli:cli"
